--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="form">    
-    <form action="">
-        <input type="text">
+    <form action="" method="POST">
+        <input type="text" name="value">
+        <input type="text" name="time" value="1000">
         <input type="submit" value="Create shortcut">
     </form>
-    <form action="">
-        <input type="text">
+    <form action="" method="GET">
+        <input type="text" name = "link">
         <input type="submit" value="Get full link">
     </form>
     </div>
