--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,9 @@
     <div class="form">    
     <form action="" method="POST">
         <input type="text" name="value">
-        <input type="text" name="time" value="1000">
+        <input type="text" name="time" value="0:0:10:00">
+        <p>time format is dd:hh:mm:ss</p>
         <input type="submit" value="Create shortcut">
-    </form>
-    <form action="" method="GET">
-        <input type="text" name = "link">
-        <input type="submit" value="Get full link">
     </form>
     </div>
 </body>
